--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+<div class="header">
   <nav-bar></nav-bar>
   <div w3-inlcude-html="templates/navbar.html"></div>
+</div>
 </body>
 
 </html>
