--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 </head>
 
 <body>
-<div class="header">
-  <nav-bar></nav-bar>
-  <div w3-inlcude-html="templates/navbar.html"></div>
-</div>
+  <nav id="navbar">
+    <!-- <img src="" alt="logo" /> -->
+    <a href="">О компании</a>
+    <a href="">Услуги</a>
+    <a href="">Сертификаты</a>
+    <a href="">Наши Ресурсы</a>
+    <a href="">Наши Обьекты</a>
+    <a href="">Контакты</a>
+  </nav>
+  <div id="welcome">
+    <h1>Asia Capital Building</h1>
+    <p>Без компромиссов, без проблем!</p>
+  </div>
 </body>
 
 </html>
