added base html and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,84 @@
 </head>
 
 <body>
+  <header>
+    <div id="navbar">
+      <img src="images/Logo.svg" alt="logo">
+      <nav>
+        <a href="">О компании</a>
+        <a href="">Услуги</a>
+        <a href="">Сертификаты</a>
+        <a href="">Наши ресурсы</a>
+        <a href="">Наши обьекты</a>
+        <a href="">Контакты</a>
+      </nav>
+    </div>
+    <section>
+      <div id="title">
+        <h1>Asia Capital Building</h1>
+        <p>Мы создаем здания, сооружения и комплексы любой сложности
+          с высоким качеством и в срок</p>
+      </div>
+    </section>
+  </header>
+  <main>
+    <section>
+      <h2>О нас</h2>
+      <p>Динамично развивающаяся строительная компания, специализирующаяся на выполнении общестроительных
+        и специальных работ по возведению зданий, сооружений, производственных комплексов и складов любой сложности,
+        включая полный перечень работ по строительству зданий
+        «с нуля»:</p>
+      <ul>
+        <li>Земляные работы, устройство фундаментов, стен и перекрытий</li>
+        <li>Монолитные работы, монтаж металлоконструкций</li>
+        <li>Монтаж внутренних и внешних инженерных сетей</li>
+        <li>Ремонтные и отделочные работы</li>
+        <li>Благоустройство территории</li>
+      </ul>
+      <p>За последние годы наша компания демонстрирует уверенный
+        и постоянный рост вводимых в эксплуатацию площадей жилого, коммерческого и муниципального назначения.
+        В нашей компании имеется вся необходимая строительная техника.</p>
+    </section>
+    <section>
+      <h2>Наши услуги</h2>
+      <p>Работает на строительном рынке Казахстана с 2006 года.
+        Основное направление деятельности
+        Компании – строительно-монтажные работы, в том числе</p>
+      <ul>
+        <li>Земляные работы</li>
+        <li>Возведение несущих и ограждающих конструкций</li>
+        <li>Работы по устройству наружных инженерных сетей</li>
+        <li>Работы по устройству внутренних инженерных систем</li>
+        <li>Специальные строительные и монтажные работы</li>
+        <li>Работы по защите конструкций и оборудования от коррозии</li>
+        <li>Работы по благоустройству территорий</li>
+        <li>Ремонтно-строительные работы</li>
+        <li>Изготовление и монтаж металлоконструкций</li>
+        <li>Дорожные работы</li>
+      </ul>
+      <p>Оставьте ваши контакты, мы скоро вам позвоним</p>
+    </section>
+    <section>
+      <h2>Лицензии и сертификаты</h2>
+      <div id="certificates">
+        <img src="images/certifiactes/image3.png">
+        <img src="images/certifiactes/image4.png">
+        <img src="images/certifiactes/image5.png">
+        <img src="images/certifiactes/image6.png">
+        <img src="images/certifiactes/image7.png">
+        <img src="images/certifiactes/image8.png">
+        <img src="images/certifiactes/image9.png">
+        <img src="images/certifiactes/image10.png">
+        <img src="images/certifiactes/image11.png">
+        <img src="images/certifiactes/image12.png">
+        <img src="images/certifiactes/image13.png">
+      </div>
+      <button>Смотреть еще</button>
+    </section>
+  </main>
+  <footer>
 
+  </footer>
 </body>
 
 </html>
