fixed image urls

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         <img src="images/certifiactes/image3.png">
         <img src="images/certifiactes/image4.png">
         <img src="images/certifiactes/image5.png">
-        <img src="images/certifiactes/image6.png">
-        <img src="images/certifiactes/image7.png">
-        <img src="images/certifiactes/image8.png">
-        <img src="images/certifiactes/image9.png">
-        <img src="images/certifiactes/image10.png">
-        <img src="images/certifiactes/image11.png">
+        <img src="images/certifiactes/image6.jpeg">
+        <img src="images/certifiactes/image7.jpeg">
+        <img src="images/certifiactes/image8.jpeg">
+        <img src="images/certifiactes/image9.jpeg">
+        <img src="images/certifiactes/image10.jpeg">
+        <img src="images/certifiactes/image11.jpeg">
         <img src="images/certifiactes/image12.png">
         <img src="images/certifiactes/image13.png">
       </div>
