--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title></title>
+  <title>AsiaCapitalBuilding</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.css" rel="stylesheet">
@@ -12,12 +12,12 @@
   <div id="navbar">
     <img src="images/Logo.svg" alt="logo">
     <nav>
-      <a href="">О компании</a>
-      <a href="">Услуги</a>
-      <a href="">Сертификаты</a>
-      <a href="">Наши ресурсы</a>
-      <a href="">Наши обьекты</a>
-      <a href="">Контакты</a>
+      <a href="index.html">О компании</a>
+      <a href="pages/uslugi.html">Услуги</a>
+      <a href="pages/sertificates.html">Сертификаты</a>
+      <a href="pages/resurs.html">Наши ресурсы</a>
+      <a href="pages/obekti.html">Наши обьекты</a>
+      <a href="pages/kontakts.html">Контакты</a>
     </nav>
   </div>
 
