--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <img src="images/Logo.svg" alt="logo">
     <nav>
       <a href="index.html">О компании</a>
-      <a href="pages/uslugi.html">Услуги</a>
-      <a href="pages/sertificates.html">Сертификаты</a>
-      <a href="pages/resurs.html">Наши ресурсы</a>
-      <a href="pages/obekti.html">Наши обьекты</a>
-      <a href="pages/kontakts.html">Контакты</a>
+      <a href="uslugi.html">Услуги</a>
+      <a href="sertificates.html">Сертификаты</a>
+      <a href="resurs.html">Наши ресурсы</a>
+      <a href="obekti.html">Наши обьекты</a>
+      <a href="kontakts.html">Контакты</a>
     </nav>
   </div>
 
