added mobile adaptivity

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
       <a href="obekti.html">Наши обьекты</a>
       <a href="kontakts.html">Контакты</a>
     </nav>
+    <input type="checkbox" id="hamburger">
+    <label for="hamburger" id="hm_label">
+      <hr>
+      <hr>
+      <hr>
+    </label>
+    <div class="menu">
+      <a href="index.html">О компании</a>
+      <a href="uslugi.html">Услуги</a>
+      <a href="sertificates.html">Сертификаты</a>
+      <a href="resurs.html">Наши ресурсы</a>
+      <a href="obekti.html">Наши обьекты</a>
+      <a href="kontakts.html">Контакты</a>
+    </div>
   </div>
 
   <header>
