--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>AsiaCapitalBuilding</title>
+  <title>ACB</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.css" rel="stylesheet">
@@ -98,7 +98,6 @@
         <img src="images/certifiactes/image10.jpeg">
         <img src="images/certifiactes/image11.jpeg">
       </div>
-      <button>Смотреть еще</button>
     </section>
   </main>
   <footer>
