--- a/index.html
+++ b/index.html
@@ -64,27 +64,28 @@
           В нашей компании имеется вся необходимая строительная техника.</p>
       </article>
     </section>
+
     <section class="info dimmer">
-      <h2>Наши услуги</h2>
+      <h2>Наши принципы</h2>
       <article>
-        <p><b>Работает на строительном рынке Казахстана с 2006 года.
-            Основное направление деятельности
-            Компании – строительно-монтажные работы, в том числе</b></p>
+        <p><b>Мы полагаем, что наша первая ответственность перед людьми, которые живут и работают рядом с нами. Мы должны постоянно вести работу по повышению производительности труда и безопасности рабочих мест, при этом снижая экологически неблагоприятное воздействие на окружающую среду путем внедрения наиболее современных, безопасных, экономически эффективных и автоматизированных способов производства.</b></p>
         <ul>
-          <li>Земляные работы</li>
-          <li>Возведение несущих и ограждающих конструкций</li>
-          <li>Работы по устройству наружных инженерных сетей</li>
-          <li>Работы по устройству внутренних инженерных систем</li>
-          <li>Специальные строительные и монтажные работы</li>
-          <li>Работы по защите конструкций и оборудования от коррозии</li>
-          <li>Работы по благоустройству территорий</li>
-          <li>Ремонтно-строительные работы</li>
-          <li>Изготовление и монтаж металлоконструкций</li>
-          <li>Дорожные работы</li>
+          <li>Мы обеспечиваем квалифицированное управление производством, действуя профессионально, своевременно, этично.</li>
+          <li>Мы создаем условия для того, чтобы наши работники работали продуктивно, могли решать поставленные задачи, наиболее полно используя свои знания, умения и навыки.</li>
+          <li>Интересы компании и каждого – работники неотделимы друг от друга.</li>
+          <li>Мы стремимся делать работу качественно, в срок, по оптимальной цене.</li>
+          <li>Мы придаем большое значение освоению новых перспективных технологий.</li>
+          <li>Оценка деятельности компании ведется по строгим критериям в сравнении с наилучшими показателями, как самой компании, так и конкурентной среды.</li>
         </ul>
-        <p><b>Оставьте ваши контакты, мы скоро вам позвоним</b></p>
       </article>
     </section>
+    <section class="info">
+      <h2>Наша Стратегия</h2>
+      <article>
+        <p><b>Предложение наиболее оптимальных решений поставленных задач в четком соответствии с требованиями заказчиков не только за счет повышения эффективности уже существующих видов деятельности, но и путем развития новых направлений, охватывающих все более широкий спектр деловых интересов постоянных и потенциальных заказчиков. Компания стремится всегда идти в ногу со временем, демонстрируя высокотехнологичный подход к строительному бизнесу.</b></p>
+      </article>
+    </section>
+    
     <section class="certs">
       <h2>Лицензии и сертификаты</h2>
       <div id="certificates">
