--- a/resurs.html
+++ b/resurs.html
@@ -34,6 +34,11 @@
       <a href="kontakts.html">Контакты</a>
     </div>
   </div>
+Персонал, техническая оснащенность
+
+ На сегодняшний день компания имеет укомплектованный штат инженерно-технических работников и специалистов, парк дорожно-строительной техники и специализированного оборудования.
+ Руководством компании уделяется большое внимание обучению и повышению квалификации работников.
+ Технические возможности компании и высокий уровень специалистов гарантируют осуществление эффективного и бесперебойного производства работ на всей территории Республики Казахстан и обеспечивают соблюдение договорных обязательств и утвержденного бюджета.
 
   <footer>
 
