--- a/uslugi.html
+++ b/uslugi.html
@@ -34,6 +34,17 @@
       <a href="kontakts.html">Контакты</a>
     </div>
   </div>
+ТОО «Asia Capital Building» - строительная компания, специализирующаяся на выполнении общестроительных и специальных работ по возведению зданий, сооружений, <br>производственных комплексов и складов любой сложности с полным комплексом работ.<br>
+
+•Земляные работы, устройство фундаментов, стен и перекрытий;<br>
+•Монолитные работы, монтаж металлоконструкций;<br>
+•Монтаж внутренних и внешних инженерных сетей;<br>
+•Ремонтные и отделочные работы;<br>
+•Благоустройство территории;<br>
+•Дорожные работы;<br>
+•Монтаж технологического оборудования;<br>
+
+Год основания - 2006
 
   <footer>
 
