--- a/sertificates.html
+++ b/sertificates.html
@@ -34,6 +34,16 @@
       <a href="kontakts.html">Контакты</a>
     </div>
   </div>
+  <h1>Лицензии и сертификаты</h1><br>
+
+Деятельность Компании регламентирована:<br>
+
+ государственной лицензией I категории на производство строительно- монтажных работ   ГСЛ №01103, выданной   19.05.2017 года;<br>
+     В Компании внедрена система менеджмента качества, система менеджмента профессиональной безопасности и здоровья  и экологического менеджмента в соответствии со <br>стандартами:<br>
+
+ СТ РК ISO 9001 – 2016 (ISO 9001:2015);<br>
+ СТ РК OHSAS 18001 – 2008 (OHSAS 18001:2007);<br>
+ СТ РК ISO 14001 – 2016 (ISO 14001:2015).
 
   <footer>
 
