--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <header>
+  <header class="home_header">
     <section>
       <div id="title">
         <h1>Asia Capital Building</h1>
@@ -68,24 +68,34 @@
     <section class="info dimmer">
       <h2>Наши принципы</h2>
       <article>
-        <p><b>Мы полагаем, что наша первая ответственность перед людьми, которые живут и работают рядом с нами. Мы должны постоянно вести работу по повышению производительности труда и безопасности рабочих мест, при этом снижая экологически неблагоприятное воздействие на окружающую среду путем внедрения наиболее современных, безопасных, экономически эффективных и автоматизированных способов производства.</b></p>
+        <p><b>Мы полагаем, что наша первая ответственность перед людьми, которые живут и работают рядом с нами. Мы
+            должны постоянно вести работу по повышению производительности труда и безопасности рабочих мест, при этом
+            снижая экологически неблагоприятное воздействие на окружающую среду путем внедрения наиболее современных,
+            безопасных, экономически эффективных и автоматизированных способов производства.</b></p>
         <ul>
-          <li>Мы обеспечиваем квалифицированное управление производством, действуя профессионально, своевременно, этично.</li>
-          <li>Мы создаем условия для того, чтобы наши работники работали продуктивно, могли решать поставленные задачи, наиболее полно используя свои знания, умения и навыки.</li>
+          <li>Мы обеспечиваем квалифицированное управление производством, действуя профессионально, своевременно,
+            этично.</li>
+          <li>Мы создаем условия для того, чтобы наши работники работали продуктивно, могли решать поставленные задачи,
+            наиболее полно используя свои знания, умения и навыки.</li>
           <li>Интересы компании и каждого – работники неотделимы друг от друга.</li>
           <li>Мы стремимся делать работу качественно, в срок, по оптимальной цене.</li>
           <li>Мы придаем большое значение освоению новых перспективных технологий.</li>
-          <li>Оценка деятельности компании ведется по строгим критериям в сравнении с наилучшими показателями, как самой компании, так и конкурентной среды.</li>
+          <li>Оценка деятельности компании ведется по строгим критериям в сравнении с наилучшими показателями, как самой
+            компании, так и конкурентной среды.</li>
         </ul>
       </article>
     </section>
     <section class="info">
       <h2>Наша Стратегия</h2>
       <article>
-        <p><b>Предложение наиболее оптимальных решений поставленных задач в четком соответствии с требованиями заказчиков не только за счет повышения эффективности уже существующих видов деятельности, но и путем развития новых направлений, охватывающих все более широкий спектр деловых интересов постоянных и потенциальных заказчиков. Компания стремится всегда идти в ногу со временем, демонстрируя высокотехнологичный подход к строительному бизнесу.</b></p>
+        <p><b>Предложение наиболее оптимальных решений поставленных задач в четком соответствии с требованиями
+            заказчиков не только за счет повышения эффективности уже существующих видов деятельности, но и путем
+            развития новых направлений, охватывающих все более широкий спектр деловых интересов постоянных и
+            потенциальных заказчиков. Компания стремится всегда идти в ногу со временем, демонстрируя
+            высокотехнологичный подход к строительному бизнесу.</b></p>
       </article>
     </section>
-    
+
     <section class="certs">
       <h2>Лицензии и сертификаты</h2>
       <div id="certificates">
