--- a/resurs.html
+++ b/resurs.html
@@ -34,11 +34,180 @@
       <a href="kontakts.html">Контакты</a>
     </div>
   </div>
-Персонал, техническая оснащенность
-
- На сегодняшний день компания имеет укомплектованный штат инженерно-технических работников и специалистов, парк дорожно-строительной техники и специализированного оборудования.
- Руководством компании уделяется большое внимание обучению и повышению квалификации работников.
- Технические возможности компании и высокий уровень специалистов гарантируют осуществление эффективного и бесперебойного производства работ на всей территории Республики Казахстан и обеспечивают соблюдение договорных обязательств и утвержденного бюджета.
+  <header>
+    <section>
+      <div class="title">
+        <h1>Наши ресурсы</h1>
+      </div>
+    </section>
+  </header>
+  <main>
+    <section>
+      <!-- <h2>Персонал, техническая оснащенность</h2> -->
+      <p>
+        На сегодняшний день компания имеет укомплектованный штат инженерно-технических работников и специалистов, парк
+        дорожно-строительной техники и специализированного оборудования.
+        Руководством компании уделяется большое внимание обучению и повышению квалификации работников.
+        Технические возможности компании и высокий уровень специалистов гарантируют осуществление эффективного и
+        бесперебойного производства работ на всей территории Республики Казахстан и обеспечивают соблюдение договорных
+        обязательств и утвержденного бюджета.
+      </p>
+      <table>
+        <tr>
+          <th>Наименование </th>
+          <th>Количество</th>
+        </tr>
+        <tr>
+          <td>Главный инженер </td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Главный энергетик </td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Главный механик </td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Инженер по контролю Качества </td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Начальник ПТО </td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Начальник САО </td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Инженер по ОТ и ТБ </td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Инженер-сметчик </td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>Геодезист </td>
+          <td>7</td>
+        </tr>
+        <tr>
+          <td>Инженер ПТО </td>
+          <td>7</td>
+        </tr>
+        <tr>
+          <td>Снабженец </td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Начальник участка </td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Прораб </td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <td>Мастер участка </td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>Электрогазосварщик 6 разряда </td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Электрогазосварщик 5 разряда </td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>Электрогазосварщик 4 разряда </td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>Газорезчик 5 разряда </td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <td>Газорезчик 4 разряда </td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Газорезчик 3 разряда </td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Монтажник 5 разряда </td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>Монтажник 4 разряда </td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>Монтажник 3 разряда </td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>Стропальщик </td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <td>Каменщик 4-5 разряда</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Кровельщик 4 разряда</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Электромонтер 5 разряда</td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>Бетонщик </td>
+          <td>30</td>
+        </tr>
+        <tr>
+          <td>Арматурчик</td>
+          <td>30</td>
+        </tr>
+        <tr>
+          <td>Разнорабочий</td>
+          <td>30</td>
+        </tr>
+        <tr>
+          <td>Плотник </td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Механик </td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Машинист погрузчика </td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Машинист автокрана 5 разряда</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>Тракторист машинист </td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Оператор компрессора </td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Водитель </td>
+          <td>7</td>
+        </tr>
+      </table>
+    </section>
+  </main>
 
   <footer>
 
