--- a/uslugi.html
+++ b/uslugi.html
@@ -34,17 +34,30 @@
       <a href="kontakts.html">Контакты</a>
     </div>
   </div>
-ТОО «Asia Capital Building» - строительная компания, специализирующаяся на выполнении общестроительных и специальных работ по возведению зданий, сооружений, <br>производственных комплексов и складов любой сложности с полным комплексом работ.<br>
-
-•Земляные работы, устройство фундаментов, стен и перекрытий;<br>
-•Монолитные работы, монтаж металлоконструкций;<br>
-•Монтаж внутренних и внешних инженерных сетей;<br>
-•Ремонтные и отделочные работы;<br>
-•Благоустройство территории;<br>
-•Дорожные работы;<br>
-•Монтаж технологического оборудования;<br>
-
-Год основания - 2006
+  <header>
+    <section>
+      <div class="title">
+        <h1>Услуги</h1>
+      </div>
+    </section>
+  </header>
+  <main>
+    <section>
+      <p>ТОО «Asia Capital Building» - строительная компания, специализирующаяся на выполнении общестроительных и
+        специальных работ по возведению зданий, сооружений, <br>производственных комплексов и складов любой сложности с
+        полным комплексом работ.</p>
+      <ul>
+        <li>Земляные работы, устройство фундаментов, стен и перекрытий</li>
+        <li>Монолитные работы, монтаж металлоконструкций</li>
+        <li>Монтаж внутренних и внешних инженерных сетей</li>
+        <li>Ремонтные и отделочные работы</li>
+        <li>Благоустройство территории</li>
+        <li>Дорожные работы</li>
+        <li>Монтаж технологического оборудования</li>
+      </ul>
+      <p>Год основания - 2006</p>
+    </section>
+  </main>
 
   <footer>
 
