--- a/obekti.html
+++ b/obekti.html
@@ -1,43 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>ACB</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <title>ACB</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-  <div id="navbar">
-    <img src="images/Logo.svg" alt="logo">
-    <nav>
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
-    </nav>
-    <input type="checkbox" id="hamburger">
-    <label for="hamburger" id="hm_label">
-      <hr>
-      <hr>
-      <hr>
-    </label>
-    <div class="menu">
-      <a href="index.html">О компании</a>
-      <a href="uslugi.html">Услуги</a>
-      <a href="sertificates.html">Сертификаты</a>
-      <a href="resurs.html">Наши ресурсы</a>
-      <a href="obekti.html">Наши обьекты</a>
-      <a href="kontakts.html">Контакты</a>
+  <body>
+    <div id="navbar">
+      <img src="images/Logo.svg" alt="logo" />
+      <nav>
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
+      </nav>
+      <input type="checkbox" id="hamburger" />
+      <label for="hamburger" id="hm_label">
+        <hr />
+        <hr />
+        <hr />
+      </label>
+      <div class="menu">
+        <a href="index.html">О компании</a>
+        <a href="uslugi.html">Услуги</a>
+        <a href="sertificates.html">Сертификаты</a>
+        <a href="resurs.html">Наши ресурсы</a>
+        <a href="obekti.html">Наши обьекты</a>
+        <a href="kontakts.html">Контакты</a>
+      </div>
     </div>
-  </div>
+    <header>
+      <section>
+        <div class="title">
+          <h1>Наши обьекты</h1>
+        </div>
+      </section>
+    </header>
+    <main>
+      <table></table>
+    </main>
 
-  <footer>
-
-  </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
